[project]
name = "seosiri-biorobotics"
version = "1.0.0"
description = "A stateless, deterministic Bio-Robotics Core Engine leveraging the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SEOSiri-Official", email = "info@seosiri.org" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Robotics"
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "pyserial>=3.5"
]

[project.urls]
Homepage = "https://github.com/SEOSiri-Official/biorobotics"
Repository = "https://github.com/SEOSiri-Official/biorobotics.git"
Sponsorship = "https://github.com/sponsors/SEOSiri-Official"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"